--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
 [role="region"] {
   width: 100%;
   position: fixed;
+  z-index: 10;
 }
 
 
