--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -7,7 +7,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 100;
+  z-index: 10;
   background: rgba(0,0,0, 0.85);
 }
 
